[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["Qingyou Zhao <qzhao@ike.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.11"
indicatif = "0.15.0"
ultraviolet = "0.7.5"
rand = "0.7.3"
rayon = "1.5.0"

