[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["Qingyou Zhao <qzhao@ike.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.11"
indicatif = "0.15.0"
ultraviolet = {version = "0.7.5", features = ["f64"]}
rand = "0.7.3"
rand_distr = "0.3.0"
rayon = "1.5.0"
subprocess = "0.2.6"

